--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "joi": "^17.9.0",
     "nanoid": "^3.3.4",
     "node-pg-migrate": "^6.2.2",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "redis": "^4.6.5"
   }
 }
